# practising_git

./: .gitignore  DOCKER_README.md  DOCKER_SETUP_COMPLETE.md  Project_Plan_Detailed.md  Project_Prompts_Reference.md  Project_Schedule_Trackable.csv  README.md  docker-compose.prod.yml  docker-compose.yml  docker-start.sh  env.example  pablo.txt  sampledata.txt  sentinel_hub_config.yml  setup-shared-data.sh  setup_database.sh  start.sh  test_db_connection.py
GeoPulse_Integrated/geopulse_api/: .env.example  .gitignore  GEOPULSE_PLAYBOOK.md  README.md  pyproject.toml  setup_postgres.sql
GeoPulse_Integrated/geopulse_api/GeoPulse-API-Testing/: GeoPulse-Complete-API-Tests.postman_collection.json  README.md
GeoPulse_Integrated/geopulse_api/alembic/: env.py
GeoPulse_Integrated/geopulse_api/alembic/versions/: 001_create_users_table.py  002_create_files_table.py
GeoPulse_Integrated/geopulse_api/app/: config.py
GeoPulse_Integrated/geopulse_api/app/api/v1/: __init__.py
GeoPulse_Integrated/geopulse_api/app/core/: error_handler.py
GeoPulse_Integrated/geopulse_api/app/middleware/: __init__.py  logging_middleware.py  security_middleware.py
GeoPulse_Integrated/geopulse_api/app/modules/dashboard/: schemas.py  services.py
GeoPulse_Integrated/geopulse_api/app/modules/login/: schemas.py  services.py
GeoPulse_Integrated/geopulse_api/app/modules/registration/: models.py  routes.py  schemas.py  services.py
GeoPulse_Integrated/geopulse_api/app/modules/upload/: __init__.py  models.py  routes.py
GeoPulse_Integrated/geopulse_api/tests/: test_file_service.py  test_password_service.py
documentation/: rapur_5.csv  (+2 more)
(+283 files in other folders)
